[package]
name = "rhai-egui"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = { version = "0.26.2", features = ["persistence"] }
serde = { version = "1.0.197", features = ["derive"] }
rhai = { git = "https://github.com/MercuricChloride/rhai.git", features = ["dev", "no_time", "substreams_runtime"]}
serde_json = "1.0.114"
serde_yaml = "0.9.32"


[features]
dev = []
