[package]
name = "rhai-egui"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = { version = "0.26.2", features = ["persistence"] }
serde = { version = "1.0.197", features = ["derive"] }
rhai = { git = "https://github.com/MercuricChloride/rhai.git", features = ["dev", "no_time", "substreams_runtime"]}
serde_json = "1.0.114"
serde_yaml = "0.9.32"
egui_extras = { version = "0.26.2", features = ["syntect"] }
substreams-sink-rust-lib = { git = "https://github.com/MercuricChloride/substreams-sink-rust.git", branch = "lib-version"}
tokio = "1.36.0"
dotenv = "0.15.0"
egui_json_tree = "0.4.0"
rand = "0.8.5"

[features]
dev = []
